fix dimension scrollbar

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,5 +1,6 @@
 .moonboard{
     height: 100%;
+    padding-top: 64px;
     /* min-height: 200px; */
 }
 
